name:                pycorrect
version:             0.1.0.0
synopsis:            Analyze Python source code for correctness
description:         Please see README.md

license:             GPL
license-file:        LICENSE
author:              Jonathan M. Lange
maintainer:          jml@mumak.net
copyright:           © 2016 Jonathan M. Lange
homepage:            https://github.com/jml/pycorrect
bug-reports:         https://github.com/jml/pycorrect/issues

category:            Language
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/jml/pycorrect

library
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    lib
  exposed-modules:   Lib
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude

executable pycorrect
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude >= 0.5
                   , pycorrect


test-suite pycorrect-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    tests
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude >= 0.5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , pycorrect

test-suite pycorrect-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    doctests
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude >= 0.5
                   , doctest >=0.10
                   , QuickCheck >= 2.5
                   , pycorrect

benchmark pycorrect-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    benchmarks
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude >= 0.5
                   , criterion >= 1.1
                   , pycorrect
